--- a/index.html
+++ b/index.html
@@ -8,7 +8,6 @@
   <body>
     <div
       style="
-        border: 2px solid black;
         width: 50vw;
         padding: 7px;
         margin-left: 500px;
@@ -21,7 +20,7 @@
       </div>
       <img
         style="margin-top: 10px"
-        src="file:///home/nickelfox/Downloads/Frame%201000004438.svg"
+        src="./Assets/Frame 1000004438.svg "
         width="150px"
       />
       <div style="font-family: 
