--- a/index2.html
+++ b/index2.html
@@ -8,7 +8,7 @@
   <body>
     <div
       style="
-        border: 2px solid black;
+      
         width: 50vw;
         padding: 7px;
         background-color: black;
@@ -23,7 +23,7 @@
       </div>
       <img
         style="margin-top: 10px"
-        src="file:///home/nickelfox/Downloads/Frame%201000004438%20(2).svg"
+        src="./Assets/Frame 1000004438 (2).svg"
         width="150px"
       />
       <div style="color: white;font-family: 
